# honey-the-audience-broke-my-app

./: .gitignore  CLAUDE.md.draft  DEMO_SCRIPT.md  Dockerfile  README.md  docker-compose.yml  mirrord-mirror.json  mirrord.json  my-secrets.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: mirrord-agent-conference.md
.claude/skills/mirrord-agent-conference/: SKILL.md
.github/workflows/: build.yml
.mirrord/: mirrord-e2e.json  mirrord.json
app/: database.py  main.py  metrics.py  models.py  redis_client.py  referral.py
app/static/: admin.html  results.css  results.html  results.js  vote.css  vote.html  vote.js
e2e/: pace.spec.ts  package-lock.json  package.json  playwright.config.ts  referral-cache-fix.spec.ts  votes-pace.spec.ts
helm/conference-app/: Chart.yaml  values.yaml
helm/conference-app/templates/: alertmanager-configmap.yaml  alertmanager-deployment.yaml  alertmanager-service.yaml  cert-manager-issuer.yaml  namespace.yaml  networkpolicies.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-seed-job.yaml  postgres-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml  vote-api-deployment.yaml  vote-api-ingress.yaml  vote-api-service.yaml  vote-api-serviceaccount.yaml
scripts/: init_db.sql  seed_referral_data.py
tests/: conftest.py  test_referral.py  test_vote.py
